# mtfind

./: .clang-format  .gitignore  CMakeLists.txt
include/: om_chunk.h  om_message.h  om_message_manager.h  om_object.h  om_settings.h  om_source.h  om_thread.h  om_visualizer.h  om_visualizer_chunk.h  om_wait.h  om_worker.h
source/: om_chunk.cpp  om_main.cpp  om_message.cpp  om_message_manager.cpp  om_object.cpp  om_settings.cpp  om_source.cpp  om_thread.cpp  om_visualizer.cpp  om_visualizer_chunk.cpp  om_worker.cpp
